[package]
name = "adventofcode"
version = "0.0.0"
authors = ["benaryorg <binary@benary.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
env_logger = "^0.8.2"
error-chain = "0.12.4"
lazy_static = "^1.4"
log = "^0.4.0"
nom = "^6.0"
regex = "^1.4"

[dependencies.reqwest]
version = "^0.10.9"
default-features = false
features = ["blocking","rustls-tls"]

