[package]
name = "adventofcode"
version = "0.0.0"
authors = ["benaryorg <binary@benary.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "y2020", "y2021" ]
y2020 = []
y2021 = []

[dependencies]
anyhow = "^1.0"
bitvec = "^0.22.3"
clap = "^2.34"
env_logger = "^0.9.0"
lazy_static = "^1.4"
log = "^0.4.14"
nom = "^7.1"
num = "^0.4.0"
rayon = "^1.5"
regex = "^1.5"
thiserror = "^1.0"

[dependencies.reqwest]
version = "^0.11.7"
default-features = false
features = ["blocking","rustls-tls"]

